2017.11/_sources/plugins/available/feature-table/relative-frequency.txt
relative-frequency: Convert to relative frequencies
===================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime feature-table relative-frequency [OPTIONS]

     Convert frequencies to relative frequencies by dividing each frequency in
     a sample by the sum of frequencies in that sample.

   Options:
     --i-table PATH                  Artifact: FeatureTable[Frequency]
                                     [required]
                                     The feature table to be converted
                                     into relative frequencies.
     --o-relative-frequency-table PATH
                                     Artifact: FeatureTable[RelativeFrequency]
                                     [required if not passing --output-dir]
                                     The
                                     resulting relative frequency feature table.
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Convert to relative frequencies

   Convert frequencies to relative frequencies by dividing each frequency in a
   sample by the sum of frequencies in that sample.

   Parameters
   ----------
   table : FeatureTable[Frequency]
       The feature table to be converted into relative frequencies.

   Returns
   -------
   relative_frequency_table : FeatureTable[RelativeFrequency]
       The resulting relative frequency feature table.</pre>
       </div>
     </div>
   </div>